Set min-width on numPages to prevent jumping toolbarViewerMiddle.

--- a/src/stylesheets/components/viewer/_toolbar.scss
+++ b/src/stylesheets/components/viewer/_toolbar.scss
@@ -56,4 +56,8 @@
       }
     }
   }
+
+  #numPages {
+    min-width: $numPages-min-width;
+  }
 }
